# tasks-backend

./: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt  template.yaml
app/server/: app.py  database.py
app/server/models/: student.py  student_model.py
app/server/routes/: student.py  student_router.py
bruno/: Create Users.bru  Login (Unsuccessful).bru  Login.bru  bruno.json
deployment/: deploy.sh  samconfig.toml
src/: app.py
src/database/: __init__.py  db.py
src/models/: __init__.py  tasks.py
src/server/: app.py  database.py
src/server/models/: student_models.py  task_models.py  todo_models.py
src/server/routes/: student_router.py  task_router.py  todo_router.py
src/server/schemas/: student_schemas.py  task_schemas.py  todo_schemas.py
src/utils/: __init__.py
tasks_backend/: app.py  auth.py  db.py  main.py  run.py
tasks_backend/models/: auth.py  categories.py  links.py  public.py  shared.py  tasks.py  users.py
tasks_backend/routers/: auth.py  categories.py  categories_router.py  tasks.py  tasks_router.py  users.py
tasks_backend/utils/: auth_utils.py  get_current_utc_time.py  get_db_url.py  get_jwt_secret_key.py  model_utils.py  utils.py
